@@ -1,0 +1,16 @@
+%channels = [b31 a1 b30 a4 b27 a5 b28 a6 b25 a7 b26 a8 b23 a9 b24 a10 b21 a11 b22 a12 b19 a13 b20 a14 b1 a31 b2 a32 b3 a29 b4 a30 b5 a27 b6 a28 b7 a25 b8 a26 b9 a23 b10 a24 b11 a21 b12 a22 b13 a19 b14 a20 b15 a17 b16 a18 b18 a16 b17 a15];
+channels =  [63  1  62   4 59  5  60  6  57  7  58  8  55  9  56  10  53  11  54  12  51  13  52  14  33 31  34 32  35 29  36 30  37 27  38 28  39 25  40 26  41 23  42  24  43  21  44  22  45  19  46  20  47  17  48  18  50  16  49  15, 2 3 61 64];
+
+geometry = zeros(numel(channels), 2);
+geometry(:,2) = [0:numel(channels)-1]*20;
+geometry(1:2:end,1) = 34.6;
+
+viSite_bad = [1:9, 25:29, 31,33,35,37,61:64];
+channels(viSite_bad) = [];
+geometry(viSite_bad,:) = [];
+
+pad = [15 5]; %in micrometers, height x width (270 um2)
+shank = ones(1, numel(channels));
+
+maxSite = 2;
+nSites_ref = 0;
