@@ -1,0 +1,12 @@
+channels = [38 37 40 39 34 36 33 35 64 63 62 61 60 58 59 57 46 45 23 24 42 44 41 43 56 55 54 53 52 9 51 10 25 26 27 28 22 21 48 20 12 50 11 14 7 5 8 6 30 32 29 31 17 19 47 18 15 49 13 16 4 3 2 1];
+
+geometry = zeros(numel(channels), 2);
+geometry(:,2) = [   828   810   810   789   561   582   539   561   315   333   561   539   810   582   789   828   789   828   810   582   561   539   315   333   539   561   561   582   810   789   828   810    63    42    84    63    63    42    84     63   315   290   333   315   315   290   810   561   810   561   315   290   333   315   315   290    84    63    63    42    84    63    63    42];
+geometry(:,1) = [   819   839   797   819   797   819   819   839   797   819   591   570   591   570   570   570   321   321   299   321   299   321    93    75    75    54    93    75    93    75    75    54   342   321   321   299    54    75    75 93   342   321   321   299    54    75   342   342   549   549   839   819   570   591   549   570   819   797   839   819   570   591   549   570];
+geometry = geometry(channels, :);
+
+pad = [12 12]; %in micrometers, height x width
+%shank = [1 1 1 1 2 2 2 2 3 3 3 3 4 4 4 4 5 5 5 5 6 6 6 6 7 7 7 7 8 8 8 8 9 9 9 9 10 10 10 10 11 11 11 11 12 12 12 12 13 13 13 13 14 14 14 14 15 15 15 15 16 16 16 16];
+
+maxSite = 1.5;
+nSites_ref = 0;
